# StatisticsAPI

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
core/: asgi.py  settings.py  urls.py  wsgi.py
root/: settings.py
